<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceBlue"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:text="@string/str_app_title"
        style="@style/ms_text_title" />

    <LinearLayout
        style="@style/ms_liner_layout1">
    <TextView
        android:text="用  户  名"
        style="@style/ms_text_content"/>

        <EditText
            android:id="@+id/et_username"
            style="@style/ms_et"
            android:hint="@string/str_user_name_hint"
            android:singleLine="true"
            android:maxLength="12">
        </EditText>
</LinearLayout>

    <LinearLayout
        style="@style/ms_liner_layout1">
        <TextView
            android:text="密        码"
            style="@style/ms_text_content"/>

        <EditText
            android:id="@+id/et_paw"
            android:hint="@string/str_paw_hint"
            style="@style/ms_et"
            android:inputType="textPassword"
            android:maxLength="12">
        </EditText>
    </LinearLayout>

    <LinearLayout
        style="@style/ms_liner_layout1">
        <TextView
            android:text="@string/str_paw_again"
            style="@style/ms_text_content"/>
        <EditText
            android:id="@+id/et_paw_again"
            android:hint="@string/str_paw_hint_again"
            style="@style/ms_et"
            android:inputType="textPassword"
            android:maxLength="12">
        </EditText>
    </LinearLayout>

    <LinearLayout
        style="@style/ms_liner_layout1"
        android:orientation="vertical">
        <TextView
            style="@style/ms_text_content"
            android:text="@string/str_select_sex">
        </TextView>

        <RadioGroup
            android:id="@+id/rad_select_sex"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                style="@style/ms_radio"
                android:id="@+id/rad_woman"
                android:text="女">
            </RadioButton>
            <RadioButton
                style="@style/ms_radio"
                android:id="@+id/rad_man"
                android:text="男">
            </RadioButton>
        </RadioGroup>

        <TextView
            style="@style/ms_text_content"
            android:text="@string/str_select_interest">
        </TextView>

        <LinearLayout
            android:id="@+id/linear_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_basketball"
                style="@style/ms_checkbox"
                android:text="@string/str_interest_1">
            </CheckBox>
            <CheckBox
                android:id="@+id/cb_football"
                style="@style/ms_checkbox"
                android:text="@string/str_interest_2">
            </CheckBox>
            <CheckBox
                android:id="@+id/cb_watchingTV"
                style="@style/ms_checkbox"
                android:text="@string/str_interest_3">
            </CheckBox>
            <CheckBox
                android:id="@+id/cb_tourism"
                style="@style/ms_checkbox"
                android:text="@string/str_interest_4">
            </CheckBox>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/ms_liner_layout1"
        android:orientation="vertical">
        <TextView
            style="@style/ms_text_content"
            android:layout_marginBottom="10dp"
            android:text="@string/str_individual_resume">
        </TextView>

        <EditText
            android:id="@+id/et_individual_resume"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/shape"
            android:padding="10dp"
            android:gravity="top"
            android:maxLength="60">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            style="@style/ms_button"
            android:layout_marginRight="60dp"
            android:id="@+id/btn_reset"
            android:text="@string/str_reset">
        </Button>
        <Button
            style="@style/ms_button"
            android:id="@+id/btn_submit"
            android:text="@string/str_submit">
        </Button>
    </LinearLayout>
</LinearLayout>